build ddd structure

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # The following was generated with gitignore.nvim: #
 #--------------------------------------------------#
 # Gitignore for the following technologies: Node
+dist/
 
 # Logs
 logs
