--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "backend para bazar midu",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch app.ts"
+    "tsc": "tsc",
+    "dev": "concurrently \"tsc -w\" \"esbuild src/app.ts --bundle --platform=node --format=esm --outfile=dist/app.js --watch --packages=external\" \"node --env-file .env --watch dist/app.js\" ",
+    "build": "tsc && esbuild src/app.ts --bundle --platform=node --format=esm --outfile=dist/app.js --packages=external",
+    "start": "node --env-file .env dist/app.js"
   },
   "keywords": [],
   "author": "eleloi",
@@ -17,8 +21,11 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.19",
+    "@types/node": "^20.8.4",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "concurrently": "8.2.1",
+    "esbuild": "0.19.4",
     "eslint": "8.51.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-import": "^2.25.2",
