--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "es6",
+    "target": "es2017",
+    "module": "nodenext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "skipLibCheck": true,
     "outDir": "dist",
+    "resolveJsonModule": true,
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
     }
   },
-  "include": [".eslintrc.cjs", "./src/**/*"]
+  "include": [".eslintrc.cjs", "./src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
