--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "tsc": "tsc",
     "dev": "concurrently \"tsc -w\" \"esbuild src/app.ts --bundle --platform=node --format=esm --outfile=dist/app.js --watch --packages=external\" \"node --env-file .env --watch dist/app.js\" ",
     "build": "tsc && esbuild src/app.ts --bundle --platform=node --format=esm --outfile=dist/app.js --packages=external",
@@ -18,10 +18,13 @@
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
+    "express-requests-logger": "4.0.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.19",
+    "@types/express-requests-logger": "3.0.2",
+    "@types/jest": "29.5.5",
     "@types/node": "^20.8.4",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "concurrently": "8.2.1",
@@ -31,6 +34,9 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "29.7.0",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
     "typescript": "^5.2.2"
   }
 }
