--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,30 @@
 {
-  "compilerOptions": {
-    "target": "es2017",
-    "module": "nodenext",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
-    "skipLibCheck": true,
-    "outDir": "dist",
-    "resolveJsonModule": true,
-    "baseUrl": "./src",
-    "paths": {
-      "@/*": ["*"]
-    }
-  },
-  "include": [".eslintrc.cjs", "./src/**/*"],
-  "exclude": ["node_modules", "dist"]
+    "compilerOptions": {
+        "target": "es2017",
+        "module": "nodenext",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "allowImportingTsExtensions": true,
+        "noEmit": true,
+        "skipLibCheck": true,
+        "outDir": "dist",
+        "resolveJsonModule": true,
+        "baseUrl": "./src",
+        "paths": {
+            "@/*": [
+                "*"
+            ]
+        }
+    },
+    "include": [
+        ".eslintrc.cjs",
+        "./src/**/*",
+        "./test/**/*",
+        "jest.config.mjs"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
